--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
         "laravel-mix": "^6.0.25",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
+        "postcss": "^8.3.1",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "jqvmap": "^1.5.1",
         "@fortawesome/fontawesome-free": "^5.7.2",
         "bootstrap": "^4.2.1",
         "bootstrap-colorpicker": "^3.0.3",
@@ -40,7 +40,6 @@
         "datatables.net-select-bs4": "^1.2.7",
         "dropzone": "^5.5.1",
         "flag-icon-css": "^3.2.1",
-        "fullcalendar": "^3.10.0",
         "gmaps": "^0.4.24",
         "ionicons201": "1.0.0",
         "izitoast": "^1.4.0",
@@ -48,6 +47,7 @@
         "jquery-sparkline": "^2.4.0",
         "jquery-ui-dist": "^1.12.1",
         "jquery.nicescroll": "^3.7.6",
+        "jqvmap": "^1.5.1",
         "moment": "^2.24.0",
         "nicescroll": "^3.7.4",
         "owl.carousel": "^2.3.4",
