--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/passport": "~9.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
+        "laraveles/spanish": "^1.5",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
