--- a/.env
+++ b/.env
@@ -47,3 +47,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MAILCHIMP_APIKEY=1831edc830a2acb9feb04822e8cfb8ed-us5
+MAILCHIMP_LIST_ID=6c85d4e4e6
