--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
         "laraveles/spanish": "^1.5",
+        "spatie/laravel-newsletter": "^4.10",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
