--- a/.env
+++ b/.env
@@ -24,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=mail.solucionesbanker.com
+MAIL_PORT=465
+MAIL_USERNAME=alejandro@solucionesbanker.com
+MAIL_PASSWORD=8RMNdRKS%105
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=alejandro@solucionesbanker.com
+MAIL_FROM_NAME=alejandro
 
 RECAPTCHA_SITE_KEY=6LdzxXkbAAAAAH34VsakuPj1gtXCmmitD8NkwNTr
 RECAPTCHA_SECRET_KEY=6LdzxXkbAAAAAIICP6fN3VL_qQ0MNxJs_Gq4xon_
